[package]
name = "btx"
version = "0.1.0"
authors = ["xuhua <cxuhua@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "btx"
crate-type = ["staticlib"]
path = "src/lib.rs"


[dependencies]
leveldb = "0.8.6"
env_logger = "0.8.3"
bech32 = "0.7.3"
sha2 = "0.9.3"
hex = "0.4.3"
bytes = "0.5.6"
tempdir = "0.3.7"
rsa = "0.3.0"
rand = "0.7.3"
secp256k1 = { version = "0.20.1", features = [ "rand-std" ] }
num-traits = "0.2.14"
num-bigint = "0.3.2"
chrono = "0.4.19"
log = "0.4.14"
config = "0.10.1"
lru = "0.6.5"
db-key = "0.0.5"
lazy_static = "1.4.0"