[package]
name = "btx"
version = "0.0.1"
authors = ["xuhua <cxuhua@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "btx"
crate-type = ["staticlib"]
path = "src/lib.rs"


[dependencies]
threadpool = "1.8.1"
leveldb = "0.8.6"
env_logger = "0.8.4"
bech32 = "0.8.1"
sha2 = "0.9.8"
hex = "0.4.3"
bytes = "1.0.1"
tempdir = "0.3.7"
rsa = "0.4.1"
rand = "0.8.4"
secp256k1 = { version = "0.20.3", features = [ "rand-std" ] }
num-traits = "0.2.14"
num-bigint = "0.4.2"
chrono = "0.4.19"
log = "0.4.14"
config = "0.11.0"
lru = "0.6.6"
db-key = "0.0.5"
lazy_static = "1.4.0"
# redis = { version = "0.21.0", features = ["tokio-comp"] }
# tokio = { version = "1.9.0", features = ["full"] }
# hyper = { version = "0.14", features = ["full"] }
